# Sirius-Forester

./: .gitignore  AGENTS.md  CONTRACTS.md  Cargo.toml  LICENSE  README.md
.claude/: launch.json
.claude-plugin/: marketplace.json
.claude/skills/sirius/: SKILL.md
.github/workflows/: ci.yml  release.yml
bench/: README.md  claim-mode.ts  gate-escape.ts  receipts.ts  soak.ts  tsconfig.json  wasted-work.ts
bench/fixtures/: .gitkeep
bench/lib/: ledger.ts  report.ts  sirius.ts
docs/: architecture.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: install-binary.md  install-suite.md
plugin/hooks/: hooks.json
plugin/scripts/: install-sirius.sh  install-sothis.sh
plugin/skills/sirius/: SKILL.md
plugin/skills/sothis/: SKILL.md
src/: amt.rs  bridge.rs  cli.rs  config.rs  doctor.rs  gate.rs  gitrange.rs  hayven.rs  ledger.rs  main.rs  run.rs  shell.rs  spine.rs  workspace.rs
web/: README.md  package.json  tsconfig.json
web/fixtures/: seed.ts
web/public/: app.css  app.js  hub.css  hub.html  hub.js  index.html  stars.js
web/src/: api.ts  config.ts  db.ts  discovery.ts  hub.ts  ledger.ts  schema.ts  server.ts  sirius.ts  sse.ts  stores.ts
web/test/: config.test.ts  helpers.ts  hub.test.ts  ledger.test.ts  server.test.ts  sirius.test.ts
